feat: rewrite league recaps as a weighted news feed
Recaps are built from a story catalog scored by weight - one lead story, a stats strip and supporting panels - instead of fixed sections, so no two leagues read the same. A decided title is demoted while matches remain, teams level on points or goals are reported together, and a single match is never told twice. Stories are serialised into the existing content column and parsed back on read, so no schema change is needed; unparsable older content is regenerated on first view.